Improved layout of result messages for creation of pdf

--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -1228,6 +1228,14 @@ li a {
     margin-left: -25px;
 }
 
+.negative-left-margin9 {
+    margin-left: -43px;
+}
+
+.negative-left-margin10 {
+    margin-left: -13px;
+}
+
 .calc-padding-top {
     padding-top: 4px;
 }
