--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -109,10 +109,10 @@
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                                @Html.DisplayFor(modelItem => item.FirstClaimDate)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                                @Html.DisplayFor(modelItem => item.LastClaimDate)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
@@ -206,10 +206,10 @@
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                                @Html.DisplayFor(modelItem => item.FirstClaimDate)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                                @Html.DisplayFor(modelItem => item.LastClaimDate)
                             </td>
                             @*<td>
                                     @Html.DisplayFor(modelItem => item.NumberOfSickDays)
@@ -310,10 +310,10 @@
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                                @Html.DisplayFor(modelItem => item.FirstClaimDate)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                                @Html.DisplayFor(modelItem => item.LastClaimDate)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
